test/errors/type/str/isalnum.yasl
mt.lookup('', .isalnum)(1)
